...
    <string name="Loremipsum">Lorem Ipsum</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="like_info">Rating count is only updated upon refreshing the recipes activity.
    Please go to the main menu, and then reopen this review to see the count increase. </string>

    <string name="shared_pref_filename">com.beaker.reciperoulette.TOKEN</string>


    <string name="req_ingred">Request Ingredients</string>
    <string name="donate_ingred">Donate Ingredients</string>
    <string name="donate">Donate</string>
    <string name="contact">Contact Details</string>
    <string name="ingredient">Ingredient</string>
    <string name="view_prev_req">View outstanding requests</string>

    <string name="your_requests">Your Requests</string>
    <string name="must_enter_contact">You must enter the ingredient and your contact details.</string>
...
    <string name="menu_signout">SIGNOUT</string>

    <!--    Server Details-->
    <string name="server_wss_url">wss://cpen321-reciperoulette.westus.cloudapp.azure.com</string>

    <!--Shared Preferences-->
    <string name="prf_token">TOKEN</string>
    <string name="prf_eml">EMAIL</string>
    <string name="prf_fcmtoken">FCMTOKEN</string>
    <string name="prf_signin_time">SIGNINTIME</string>

    <string name="prf_token_def">NOTOKEN</string>
    <string name="prf_eml_def">NOEMAIL</string>

...
